--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             <p>
                 Pada URL dokumen di situs ETD, perhatikan bagian <code>bacaID=...</code>. 
                 Angka setelahnya adalah ID yang perlu Anda masukkan di bawah ini. <br>
-                Contoh: <code>...&amp;bacaID=<mark>105248</mark>&amp;...</code>
+                Contoh: <code>...&amp;bacaID=<mark>105248</mark>&amp;...</code>.Lihat <a href="https://github.com/fitrahmaulana/bot-scraping-etd-usk?tab=readme-ov-file#cara-menggunakan-panduan-bergambar" target="_blank">contoh gambar</a> untuk lebih jelasnya.
             </p>
         </div>
 
